--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -1,10 +1,15 @@
 name: auto-patch-release
 
+# on:
+#   workflow_run:
+#     workflows: ["release-patch-trigger"]
+#     types:
+#       - completed
+
 on:
-  workflow_run:
-    workflows: ["release-patch-trigger"]
-    types:
-      - completed
+  pull_request:
+    branches: 
+      - master
 
 env:
   NUGET_API_TOKEN: ${{ secrets.LLAMA_SHARP_NUGET_KEY }}
@@ -49,6 +54,23 @@ jobs:
         name: "drop-ci-packages"
         path: './temp'
 
-    - name: Push LLamaSharp packages to nuget.org
-      run: dotnet nuget push ./temp/LLamaSharp*.nupkg --source https://www.nuget.org -k ${{ secrets.LLAMA_SHARP_NUGET_KEY }} --skip-duplicate
+    # - name: Push LLamaSharp packages to nuget.org
+    #   run: dotnet nuget push ./temp/LLamaSharp*.nupkg --source https://www.nuget.org -k ${{ secrets.LLAMA_SHARP_NUGET_KEY }} --skip-duplicate
+
+    - uses: actions/setup-python@v5
+      with:
+        python-version: 3.x
+    - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+    - uses: actions/cache@v4
+      with:
+        key: mkdocs-material-${{ env.cache_id }}
+        path: .cache
+        restore-keys: |
+          mkdocs-material-
+    - run: pip install mkdocs-material 
+    - run: mkdocs gh-deploy --force
+    - run: |
+        version=$(cat ./temp/LLamaSharp.version)
+        mike deploy --push --update-aliases $version latest
+        mike set-default --push latest
 
