--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -10,6 +10,7 @@ on:
   pull_request:
     branches: 
       - master
+    types: [ opened ]
 
 env:
   NUGET_API_TOKEN: ${{ secrets.LLAMA_SHARP_NUGET_KEY }}
