--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   patch_release_to_nuget:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
