--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -20,7 +20,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      - name: Configure Git Credentials
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
     - name: Setup NuGet
       uses: nuget/setup-nuget@v1
       with:
