--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -73,7 +73,7 @@ jobs:
           mkdocs-material-
     - run: pip install mkdocs-material 
     - run: |
-        version=$(cat ./temp/LLamaSharp.version)
+        version=$(cat ./temp/version.txt)
         mike deploy --push --update-aliases $version latest
         mike set-default --push latest
 
