--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -72,6 +72,7 @@ jobs:
         restore-keys: |
           mkdocs-material-
     - run: pip install mkdocs-material 
+    - run: pip install mike
     - run: |
         version=$(cat ./temp/version.txt)
         mike deploy --push --update-aliases $version latest
