--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -73,8 +73,7 @@ jobs:
           mkdocs-material-
     - run: pip install mkdocs mkdocs-material mike
     - run: |
-        token=${{ github.token }}
-        git remote set-url origin $"https://{token}@github.com/AsakusaRinne/LLamaSharp.git"
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/AsakusaRinne/LLamaSharp.git
         git fetch origin gh-pages --depth=1
         version=$(cat ./temp/version.txt)
         mike deploy --push --update-aliases $version latest
