--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,12 @@
 name: CI
-# on:
-#   push:
-#     branches: [master]
-#   pull_request:
-#     branches: [master]
-# concurrency:
-#   group: ${{ github.workflow }}-${{ github.ref }}
-#   cancel-in-progress: true
-
 on:
-  workflow_run:
-    workflows: ["release-minor-trigger"]
-    types:
-      - completed
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
