fix: llava backend ignores avx and cuda.

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -379,8 +379,9 @@ jobs:
           cp artifacts/llava-bin-linux-cublas-cu12.1.0-x64.so/libllava_shared.so deps/cu12.1.0/libllava_shared.so
           
           cp artifacts/llama-bin-win-clblast-x64.dll/{llama,clblast}.dll deps/clblast/
-          
+          cp artifacts/llava-bin-win-clblast-x64.dll/llava_shared.dll deps/clblast/llava_shared.dll
           cp artifacts/llama-bin-linux-clblast-x64.so/libllama.so deps/clblast/
+          cp artifacts/llava-bin-linux-clblast-x64.so/libllava_shared.so deps/clblast/libllava_shared.so
 
 
       - name: Upload artifacts
