Revert "Try MacOS ARM availability"
This reverts commit f29f61ee0faa0884b2c26b51e6bbf66793091e7b.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
             os: ubuntu-latest
             config: release
           - build: osx-release
-            os: macos-latest-xlarge
+            os: macos-latest
             config: release
           - build: windows-release
             os: windows-2019
