--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,5 @@ site/
 /LLama.Unittest/Models/*.bin
 /LLama.Unittest/Models/*.gguf
 
+/LLama.Benchmark/Models/*.bin
+/LLama.Benchmark/Models/*.gguf
