--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -19,7 +19,7 @@ jobs:
         build: [cuda11]
         include:
           - build: cuda11
-            image: nvidia/cuda:11.7.1-runtime-ubuntu22.04
+            image: nvidia/cuda:11.7.1-devel-ubuntu22.04
           # - build: cuda12
           #   image: nvidia/cuda:12.1.1-runtime-ubuntu22.04
 
