--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -34,17 +34,23 @@ jobs:
       options: --gpus=all --ipc=host
 
     steps:
+    - name: DEBUG
+      run: | 
+        whoami
+        nvidia-smi
+        nvcc -V
+    
+    - name: Install libraries
+      run: |
+        apt update
+        apt install curl
+
     - uses: actions/checkout@v4
     - uses: actions/setup-dotnet@v4
       with:
         dotnet-version: |
           8.0.x
 
-    - name: DEBUG
-      run: | 
-        whoami
-        nvidia-smi
-        nvcc -V
     - name: Cache Packages
       uses: actions/cache@v4
       with:
