--- a/LLama.Benchmark/LLama.Benchmark.csproj
+++ b/LLama.Benchmark/LLama.Benchmark.csproj
@@ -13,24 +13,15 @@
     <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
   </ItemGroup>
 
-    <Target Name="DownloadContentFiles" BeforeTargets="Build">
-        <DownloadFile SourceUrl="https://hf-mirror.com/TheBloke/Llama-2-7b-Chat-GGUF/resolve/main/llama-2-7b-chat.Q3_K_S.gguf" DestinationFolder="Models" DestinationFileName="llama-2-7b-chat.Q3_K_S.gguf" SkipUnchangedFiles="true"></DownloadFile>
-    </Target>
-
-    <ItemGroup>
-        <Folder Include="Models\" />
-    </ItemGroup>
-
     <ItemGroup>
       <ProjectReference Include="..\LLama\LLamaSharp.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Update="Models\llama-2-7b-chat.Q3_K_S.gguf">
+        <None Update="Assets\TextCompletionPrompts.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-
-        <None Update="Assets\TextCompletionPrompts.txt">
+        <None Update="Models\extreme-ironing-taxi-610x427.jpg">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
