--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -52,13 +52,9 @@ jobs:
         dotnet-version: |
           8.0.x
 
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.10' 
-
     - name: Prepare models
       run: | 
+        apt-get install python3.10
         pip install huggingface_hub
         python3 LLama.Benchmark/prepare_models.py --model-dir ${{ matrix.modeldir }} --model-list LLama.Benchmark/Assets/models.txt --endpoint https://hf-mirror.com
 
