--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -55,6 +55,7 @@ jobs:
     - name: Prepare models
       run: | 
         apt-get install -y python3.10
+        python3 -m ensurepip --upgrade
         pip install huggingface_hub
         python3 LLama.Benchmark/prepare_models.py --model-dir ${{ matrix.modeldir }} --model-list LLama.Benchmark/Assets/models.txt --endpoint https://hf-mirror.com
 
