--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -45,13 +45,16 @@ jobs:
       run: |
         apt update
         apt install -y curl libicu-dev
+        wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+        dpkg -i packages-microsoft-prod.deb
+        rm packages-microsoft-prod.deb
+        apt-get update  && apt-get install -y dotnet-sdk-8.0
 
-    - uses: actions/checkout@v4
-    - uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: |
-          8.0.x
-        no-cdn: true
+    # - uses: actions/checkout@v4
+    # - uses: actions/setup-dotnet@v4
+    #   with:
+    #     dotnet-version: |
+    #       8.0.x
 
     - name: Prepare models
       run: | 
