--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -45,6 +45,7 @@ jobs:
       run: |
         apt update
         apt install -y curl libicu-dev
+        apt-get install wget
         wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
         dpkg -i packages-microsoft-prod.deb
         rm packages-microsoft-prod.deb
