--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -72,10 +72,10 @@ jobs:
     - name: Build
       run: | 
         dotnet clean
-        dotnet build LLama/LLamaSharp.csproj -c release --no-restore
-        dotnet build LLama.Benchmark/LLama.Benchmark.csproj -c release --no-restore
+        dotnet build LLama/LLamaSharp.csproj -c Release --no-restore
+        dotnet build LLama.Benchmark/LLama.Benchmark.csproj -c Release --no-restore
     - name: Run benchmark test
-      run: dotnet run --project LLama.Benchmark/LLama.Benchmark.csproj -c release
+      run: dotnet run --project LLama.Benchmark/LLama.Benchmark.csproj -c Release
     - name: Upload artifacts
       if: always()
       uses: actions/upload-artifact@v3
