--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -4,9 +4,9 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
-# concurrency:
-#   group: ${{ github.workflow }}-${{ github.ref }}-benchmark
-#   cancel-in-progress: true
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}-benchmark
+  cancel-in-progress: true
 
 jobs:
   linux-benchmark-cuda:
@@ -27,7 +27,7 @@ jobs:
     container:
       image: ${{ matrix.image }}
       env:
-        LLAMA_BENCHMARK_MODEL_DIR: ${{ matrix.modeldir }}
+        BENCHMARK_MODEL_DIR: ${{ matrix.modeldir }}
       ports:
         - 80
       volumes:
@@ -36,12 +36,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: DEBUG
-      run: | 
-        whoami
-        nvidia-smi
-        nvcc -V
     
     - name: Install libraries
       run: |
@@ -52,12 +46,6 @@ jobs:
         dpkg -i packages-microsoft-prod.deb
         rm packages-microsoft-prod.deb
         apt-get update  && apt-get install -y dotnet-sdk-8.0
-
-    # - uses: actions/checkout@v4
-    # - uses: actions/setup-dotnet@v4
-    #   with:
-    #     dotnet-version: |
-    #       8.0.x
 
     - name: Prepare models
       run: | 
