--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Unit Test
 on:
   push:
-    branches: [placeholder]
+    branches: [master]
   pull_request:
-    branches: [placeholder]
+    branches: [master]
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
